--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && tsc",
+    "build": "tsc",
     "clean": "del ./build/*",
     "pub": "npm version patch && npm run build && npm publish",
     "dev": "ts-node src/index.ts",
