--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "npm run clean && tsc",
     "clean": "rmdir /s /q build",
     "pub": "npm version patch && npm run build && npm publish",
-    "dev": "ts-node src/index.ts",
-    "prepare": "npm i && npm run build"
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
