--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sls-multi-gateways",
+  "name": "coco-sls-multi-gateways",
   "description": "",
-  "version": "1.3.0",
+  "version": "1.0.0",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
